--- a/ClientWebApp/index.html
+++ b/ClientWebApp/index.html
@@ -3,16 +3,30 @@
 <html ng-app="app">
 <head>
     <title></title>
+
+    <link rel="stylesheet" ; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="Scripts/angular.min.js"></script>
+    <script src="app/app.module.js"></script>
+    <script src="app/main.service.js"></script>
+    <script src="app/main.js"></script>
+    <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
 </head>
 <body ng-controller="Main as vm">
 
-    <input type="text" ng-model="vm.food" placeholder="Enter food" />
-
-    <p>Sriracha sauce is great with {{vm.food}}!</p>
-
-    <script src="Scripts/angular.min.js"></script>
-    <script src="app/app.module.js"></script>
-    <script src="app/main.js"></script>
-
+    <table ng-table="vm.tableParams" class="table" show-filter="true">
+        <tr ng-repeat="user in $data">
+            <td title="'Email Label'" sortable="'EmailLabel'">
+                {{user.EmailLabel}}
+            </td>
+            <td title="'From Address'" sortable="'FromAddress'">
+                {{user.FromAddress}}
+            </td>
+            <td title="'Date Updated'" sortable="'DateUpdated'">
+                {{user.DateUpdated | date}}
+            </td>
+        </tr>
+    </table>
+    
 </body>
 </html>
